syntax = "proto3";

package hvx.api.v1alpha1.channel.proto;
option go_package = "github.com/hvxahv/hvx/APIs/v1alpha1/channel";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "proto/v1alpha1/actor/actor.proto";

service Administrative {

  // IsAdministrator Used to check the channel administrator's privileges,
  // returning whether the user's ID is an administrator.
  rpc IsAdministrator(IsAdministratorRequest) returns (IsAdministratorResponse) {}

  // IsOwner Check if it is the owner of the channel.
  rpc IsOwner(IsOwnerRequest) returns (IsOwnerResponse) {}

  // AddAdministrator A user will be added as an administrator by the channel administrator.
  rpc AddAdministrator(AddAdministratorRequest) returns (AddAdministratorResponse) {
    option (google.api.http) = {
      post: "/api/v1/channel/admin",
      body: "*"
    };
  }

  // Removing an administrator will remove the administrative privileges of a channel administrator. 
  // This is done by the owner of the channel.
  rpc RemoveAdministrator(RemoveAdministratorRequest) returns (RemoveAdministratorResponse) {
    option (google.api.http) = {
      delete: "/api/v1/channel/admin",
      body: "*"
    };
  }

  // GetAdministrators Gets the list of administrators for the channel.
  rpc GetAdministrators(GetAdministratorsRequest) returns (GetAdministratorsResponse) {
    option (google.api.http) = {
      get: "/api/v1/channel/admin/{channelId}",
    };
  }

  // ExitAdministrator The administrator who exits the channel will have the administrator 
  // itself to access the API and choose to revoke the administrator privileges for their channel.
  // Do not become the administrator of the channel.
  rpc ExitAdministrator(ExitAdministratorRequest) returns (ExitAdministratorResponse) {
    option (google.api.http) = {
      post: "/api/v1/channel/admin/exit",
    };
  }
}

message IsAdministratorRequest {
  int64 channelId = 1;
  int64 adminId = 2;
}

message IsAdministratorResponse {
  bool isAdministrator = 1;
}

message IsOwnerRequest {
  int64 channelId = 1;
  int64 ownerId = 2;
}

message IsOwnerResponse {
  bool isOwner = 1;
}

message AddAdministratorRequest {
  int64 channelId = 1;
  int64 addedId = 3;
}

message AddAdministratorResponse {
  string code = 1;
  string status = 2;
}

message RemoveAdministratorRequest {
  int64 channelId = 1;
  int64 removedId = 2;
}

message RemoveAdministratorResponse {
  string code = 1;
  string status = 2;
}

message GetAdministratorsRequest {
  string channelId = 1 [(google.api.field_behavior) = REQUIRED];
}

message AdminsData {
  bool isOwner = 1;

  // manaadminger is actually also an activitypub actor, 
  // and this field will return all the data for the actor.
  actor.proto.ActorData admin = 2;
}

message GetAdministratorsResponse {
  string code = 1;
  repeated AdminsData admins = 2;
}

message ExitAdministratorRequest {
  int64 channelId = 1;
  int64 adminId = 2;
}

message ExitAdministratorResponse {
  string code = 1;
  string status = 2;
}